# cpu_air_prover2

./: Cargo.toml  Makefile  README.md
src/: main.rs
tests/data/: public_input.json
