[package]
name = "cpu_air_prover2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cpu_air_prover2"

[dependencies]
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "983971c4e66b55e999497370f71db2a8adfacdb7" }
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "506794b", features = [
    "parallel",
] }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "3fb0344c", features = [
    "mod_builtin",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
serde = "1.0.1"
serde_json = "1.0.1"